<resources>
    <string name="app_name">Tachomiya</string>
    <string name="title">Title</string>
    <string name="genres">Genres</string>
    <string name="synopsis">Synopsis</string>
    <string name="favorite">Favorite</string>
    <string name="synopsis_content">Synopsis content</string>
    <string name="status">Status</string>
    <string name="library">Library</string>
    <string name="about">About</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gafiliano_gapili">Gafiliano Gapili</string>
    <string name="gafiliano2_gmail_com">gafiliano2@gmail.com</string>
    <string name="credits">Inspired from Tachiyomi</string>
</resources>