<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

  <com.google.android.material.appbar.AppBarLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:liftOnScroll="true">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/detail_app_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_scrollFlags="scroll|enterAlways|snap"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
        app:elevation="4dp"
        app:title="Detail" />
  </com.google.android.material.appbar.AppBarLayout>

  <androidx.core.widget.NestedScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_marginBottom="32dp"
          android:orientation="horizontal">

        <ImageView
            android:id="@+id/manga_cover_detail"
            android:layout_width="120dp"
            android:layout_height="170dp"
            android:layout_marginEnd="16dp"
            tools:src="@tools:sample/avatars"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="170dp"
            android:gravity="center"
            android:orientation="vertical">

          <TextView
              android:id="@+id/tv_detail_title"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginBottom="8dp"
              android:textSize="16sp"
              android:textStyle="bold"
              tools:text="@string/title" />

          <TextView
              android:id="@+id/tv_detail_status"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:ellipsize="end"
              android:textSize="10sp"
              tools:text="@string/status"
              tools:ignore="SmallSp" />

          <TextView
              android:id="@+id/tv_detail_author"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:ellipsize="end"
              android:textSize="10sp"
              tools:text="Author"
              tools:ignore="SmallSp" />

          <TextView
              android:id="@+id/tv_detail_genre"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginBottom="8dp"
              android:ellipsize="end"
              android:textSize="10sp"
              tools:text="@string/genres"
              tools:ignore="SmallSp" />

          <TextView
              android:id="@+id/tv_detail_fav_icon"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/favorite"
              android:textSize="12sp"
              app:drawableTopCompat="@drawable/ic_outline_favorite_border_24" />
        </LinearLayout>
      </LinearLayout>

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="8dp"
          android:text="@string/synopsis"
          android:textSize="16sp"
          android:textStyle="bold" />

      <TextView
          android:id="@+id/tv_detail_synopsis"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/synopsis_content"
          android:textSize="14sp" />
    </LinearLayout>
  </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
